[package]
name = "proxy-exporter"
version = "0.1.0"
edition = "2024"

[dependencies]
prometheus = "0.14"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["server", "http1", "tokio"] }
http-body-util = "0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "sync", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"